<resources>
    <string name="app_name">AndroidComponent</string>
    <string name="click">Click</string>
    <string name="hello_world">Hello World</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="text">text</string>
    <string name="user_name">User Name</string>
    <string name="type_your_name">Please, type your name</string>
    <string name="user_surname">User Surname</string>
    <string name="type_your_surname">Please, type your surname</string>
    <string name="get_preference_name">Get preference name</string>
    <string name="get_preference_surname">Get preference surname</string>
    <string name="get_preference_activity">Get activity name</string>
    <string name="select_activity_index">Please, select your activity index</string>
    <string name="text2">text 2</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="textview_one">TextView One</string>
    <string name="textview_two">TextView Two</string>
    <string name="textview_three">TextView Three</string>
    <string name="dowloading">Dowloading</string>
    <string name="information">Information</string>
    <string name="save_name_and_surname_to_database">Save name and surname to database</string>
    <string name="get_all_info_from_database">Get all info from database</string>
    <string name="id_number">Id number</string>
    <string name="get_info_by_id">Get info by Id</string>
    <string name="delete_info_by_id">Delete info by id</string>
    <string name="name">Name</string>
    <string name="edit_name_and_surname_by_id">Edit name and surname by Id</string>
    <string name="loaded">Loaded</string>
    <string name="ok">OK</string>
    <string name="to_see_context_menu_please_hold_on_this_text">to see context menu please hold on this text</string>
    <string name="are_you_ok">Are you ok?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_or_ok">Cancel or Ok</string>
    <string name="select_one_item">Select One Item</string>
    <string name="select_color">Select Color</string>
    <string name="sayac">sayac =</string>
    <string name="have_to_type_cast">You have to type cast</string>
    <string name="do_not_need_to_type_cast">Do not need to type cast</string>
    <string name="map">Map</string>
    <string name="portrait">Portrait</string>
    <string name="lanscape">Landscape</string>
    <string name="before_text_changed">Before Text Changed</string>
    <string name="after_text_changed">After Text Changed</string>
    <string name="onpreexecute">onPreExecute is running</string>
    <string name="first_2000">First 2000 milliseconds are done</string>
    <string name="second_2000">Second 2000 milliseconds are done</string>
    <string name="third_2000">Third 2000 milliseconds are done</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="uzun_text"> Android Developer
     Android Developer
     Android Developer
     Android Developer
     Android Developer
     Android Developer
     Android Developer
     Android Developer
     Android Developer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="helloTek">hello</string>
    <string name="from">from</string>
    <string name="pagertabstrip">pagerTabStrip</string>

</resources>
